wip: fix about spacing on scroll

--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -28,6 +28,9 @@
     color: var(--primary-text-color);
     font-family: "Roboto Mono", monospace;
 
+    padding-top: var(--h1-font-size);
+    padding-bottom: var(--h1-font-size);
+
     position: -webkit-sticky;
     position: sticky;
     top: 0;
